vlib/v/checker/tests/interface_generic_err.vv
struct What[T] {}

// with or without generic
interface Why[T] {}

// no segfault without generic
what := What{}
why := Why(what)
